fix: blockquote pseudo-element overflow

--- a/static/css/toc.css
+++ b/static/css/toc.css
@@ -62,6 +62,10 @@
     }
 }
 
+blockquote {
+    position: relative;
+}
+
 @media (max-width: 900px) {
     .post-wrapper {
         flex-direction: column;
